--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             let key = document.getElementById("key").value;
             let message = document.getElementById("message");
 
-            if (key === "9344","0000","surya","BCA") {
+            if (key === "9344","0000") {
                 message.textContent = "Login Successful! Redirecting...";
                 message.className = "message success";
 
