--- a/index.html
+++ b/index.html
@@ -3,112 +3,96 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Key Login</title>
+    <title>Secure Login</title>
     <style>
-        body {
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
             font-family: Arial, sans-serif;
-            background: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTwSsJmDAo7O46BXlhzGm6ge5IFhb5R4jMit6HHEH4GgYrfTPuq_irSslA&s=10') no-repeat center center/cover;
+        }
+        body {
+            background: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTwSsJmDAo7O46BXlhzGm6ge5IFhb5R4jMit6HHEH4GgYrfTPuq_irSslA&s=10') no-repeat center center fixed;
+            background-size: cover;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            margin: 0;
         }
         .login-container {
-            background: rgba(255, 255, 255, 0.1);
-            padding: 20px;
+            background: rgba(0, 0, 0, 0.8);
+            padding: 30px;
             border-radius: 10px;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 0 15px rgba(255, 255, 255, 0.3);
             text-align: center;
-            width: 300px;
-            backdrop-filter: blur(10px);
+            color: white;
+            width: 350px;
         }
         .login-container h2 {
-            margin-bottom: 10px;
-            color: white;
+            margin-bottom: 20px;
         }
-        .input-group {
-            margin-bottom: 15px;
-            text-align: left;
-        }
-        .input-group label {
-            display: block;
-            font-weight: bold;
-            margin-bottom: 5px;
-            color: white;
-        }
-        .input-group input {
+        input {
             width: 100%;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            text-align: center;
-            font-size: 18px;
-        }
-        .btn {
-            width: 100%;
-            background: #007bff;
-            color: white;
-            padding: 10px;
+            padding: 12px;
+            margin: 10px 0;
             border: none;
             border-radius: 5px;
-            cursor: pointer;
             font-size: 16px;
         }
-        .btn:hover {
-            background: #0056b3;
+        button {
+            width: 100%;
+            padding: 12px;
+            background: #28a745;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+        button:hover {
+            background: #218838;
         }
         .message {
             margin-top: 15px;
+            font-size: 18px;
             font-weight: bold;
         }
         .success {
-            color: lightgreen;
+            color: #4CAF50;
         }
         .error {
-            color: red;
+            color: #FF0000;
         }
     </style>
-</head>
-<body>
-
-    <div class="login-container">
-        <h2>ENTER HACK 🔐</h2>
-        <h2>KEY BUY SURYA HACKER</h2>
-        
-        <div class="input-group">
-            <label for="key">Key</label>
-            <input type="password" id="key" required onkeypress="handleKeyPress(event)">
-        </div>
-        <button class="btn" onclick="validateLogin()">Login</button>
-        <p class="message" id="message"></p>
-    </div>
-
     <script>
-        function handleKeyPress(event) {
-            if (event.key === "Enter") {
-                validateLogin();
-            }
-        }
-
         function validateLogin() {
-            let key = document.getElementById("key").value;
-            let message = document.getElementById("message");
+            var key = document.getElementById("key").value;
+            var message = document.getElementById("message");
 
             if (key === "9344") {
-                message.textContent = "Login Successful! Redirecting...";
+                message.innerHTML = "LOGIN SUCCESS !";
                 message.className = "message success";
 
-                // Redirect after 2 seconds
-                setTimeout(() => {
+                // Redirect to your site after 2 seconds
+                setTimeout(function() {
                     window.location.href = "https://arunsurya111.github.io/hackersurya/";
                 }, 2000);
             } else {
-                message.textContent = "Invalid Key!";
+                message.innerHTML = "Access Denied! Incorrect buy Key.";
                 message.className = "message error";
             }
         }
     </script>
+</head>
+<body>
+
+    <div class="login-container">
+        <h2>LOGIN PAGE</h2>
+        <h2>PROTECTED BY AI </h2>
+        <input type="password" id="key" placeholder="ENTER KEY">
+        <button onclick="validateLogin()">Login</button>
+        <p id="message" class="message"></p>
+    </div>
 
 </body>
 </html>
