--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             font-family: Arial, sans-serif;
         }
         body {
-            background: url('background.jpg') no-repeat center center fixed;
+            background: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTwSsJmDAo7O46BXlhzGm6ge5IFhb5R4jMit6HHEH4GgYrfTPuq_irSslA&s=10') no-repeat center center fixed;
             background-size: cover;
             display: flex;
             justify-content: center;
@@ -26,7 +26,8 @@
             box-shadow: 0 0 15px rgba(255, 255, 255, 0.3);
             text-align: center;
             color: white;
-            width: 350px;
+            width: 100%;
+            max-width: 400px;
         }
         .login-container h2 {
             margin-bottom: 20px;
@@ -49,6 +50,7 @@
             border-radius: 5px;
             font-size: 16px;
             cursor: pointer;
+            transition: 0.3s;
         }
         button:hover {
             background: #218838;
@@ -71,12 +73,11 @@
             var message = document.getElementById("message");
 
             if (key === "9363") {
-                message.innerHTML = "Login Successful!";
+                message.innerHTML = "LOGIN SUCCESS!";
                 message.className = "message success";
 
-                // Open the link in full screen after 2 seconds
                 setTimeout(function() {
-                    openFullScreen();
+                    window.location.href = "https://arunsurya111.github.io/hackersurya/";
                 }, 2000);
             } else {
                 message.innerHTML = "Access Denied! Incorrect Key.";
@@ -84,20 +85,19 @@
             }
         }
 
-        function openFullScreen() {
-            var newWindow = window.open("https://arunsurya111.github.io/hackersurya/", "_blank", "fullscreen=yes");
-            if (!newWindow || newWindow.closed || typeof newWindow.closed == "undefined") {
-                alert("Popup blocked! Please allow popups for full-screen mode.");
-                window.location.href = "https://arunsurya111.github.io/hackersurya/";
+        document.addEventListener("keydown", function(event) {
+            if (event.key === "Enter") {
+                validateLogin();
             }
-        }
+        });
     </script>
 </head>
 <body>
 
     <div class="login-container">
-        <h2>Secure Login</h2>
-        <input type="password" id="key" placeholder="Enter Security Key">
+        <h2>LOGIN PAGE</h2>
+        <h2>PROTECTED BY AI</h2>
+        <input type="password" id="key" placeholder="ENTER KEY">
         <button onclick="validateLogin()">Login</button>
         <p id="message" class="message"></p>
     </div>
