--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             var key = document.getElementById("key").value;
             var message = document.getElementById("message");
 
-            if (key === "9363","SURYA","6380") {
+            if (key === "9363") {
                 message.innerHTML = "LOGIN SUCCESS!";
                 message.className = "message success";
 
