--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             font-family: Arial, sans-serif;
         }
         body {
-            background: url('https://i.gifer.com/origin/fd/fdd2726c56e7d9cd95ad83bef3365f38_w200.gif') no-repeat center center fixed;
+            background: url('https://i.pinimg.com/originals/7c/e6/23/7ce623595aa44dfc86e1427410cbc07c.gif') no-repeat center center fixed;
             background-size: cover;
             display: flex;
             justify-content: center;
