--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                 document.getElementById("success-popup").style.display = "block"; 
                 document.getElementById("top-buttons").style.display = "none"; 
             } else {
-                alert("❌ INVALID KEY BUY KEY.");
+                alert(Access Denied! Incorrect Key."");
             }
         }
 
