--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
             event.preventDefault();
             let keyInput = document.getElementById("key").value;
 
-            if (keyInput === "arun") {
+            if (keyInput === "1612") {
                 document.getElementById("login-box").style.display = "none"; 
                 document.getElementById("success-popup").style.display = "block"; 
                 document.getElementById("top-buttons").style.display = "none"; 
