--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
 
     <!-- Top Buttons -->
     <div class="top-buttons" id="top-buttons">
-        <a class="whatsapp" href="https://chat.whatsapp.com/CuakMrQkRES9huI7ayhDDm" target="_blank">Join WhatsApp</a>
-        <a class="youtube" href="https://youtube.com/@namma_village_thiruvila?si=bDjiKp9vYABOHCl6" target="_blank">Subscribe YouTube</a>
+        <a class="whatsapp" href="https://chat.whatsapp.com/your-whatsapp-group-link" target="_blank">Join WhatsApp</a>
+        <a class="youtube" href="https://www.youtube.com/channel/your-youtube-channel" target="_blank">Subscribe YouTube</a>
     </div>
 
     <!-- Login Box -->
@@ -254,12 +254,12 @@
             event.preventDefault();
             let keyInput = document.getElementById("key").value;
 
-            if (keyInput === "1617") {
+            if (keyInput === "arun") {
                 document.getElementById("login-box").style.display = "none"; 
                 document.getElementById("success-popup").style.display = "block"; 
                 document.getElementById("top-buttons").style.display = "none"; 
             } else {
-                alert(Access Denied! Incorrect Key."");
+                alert("❌ INVALID KEY BUY KEY.");
             }
         }
 
