--- a/index.html
+++ b/index.html
@@ -3,220 +3,247 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0, minimum-scale=1.0">
-    <title>Login Page</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
-    <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>S26 Ultra Login</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    
     <style>
         * {
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
             font-family: "Poppins", sans-serif;
         }
 
         body {
-            background-color: #000;
+            height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
-            min-height: 100vh;
-            background: url("https://i.pinimg.com/originals/7c/e6/23/7ce623595aa44dfc86e1427410cbc07c.gif") no-repeat;
-            background-position: center;
+            background: url("https://i.pinimg.com/originals/7c/e6/23/7ce623595aa44dfc86e1427410cbc07c.gif") no-repeat center center fixed;
             background-size: cover;
-            width: 100%;
-            flex-direction: column;
         }
 
-        .button-container {
+        .login-container {
+            width: 360px;
+            padding: 30px;
+            border-radius: 20px;
+            text-align: center;
+            background: rgba(255, 255, 255, 0.15);
+            backdrop-filter: blur(10px);
+            box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            position: relative;
+        }
+
+        .avatar-container {
+            width: 130px;
+            height: 130px;
+            border-radius: 50%;
             position: absolute;
-            top: 20px;
-            display: flex;
-            gap: 15px;
-        }
-
-        .button-container button {
-            padding: 10px 20px;
-            font-size: 1em;
-            font-weight: bold;
-            border: none;
-            border-radius: 10px;
-            cursor: pointer;
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            transition: 0.3s;
-        }
-
-        .button-container button i {
-            font-size: 1.2em;
-        }
-
-        .box {
-            width: 400px;
-            height: 350px;
-            border: 2px solid #625d5d;
+            top: -65px;
+            left: 50%;
+            transform: translateX(-50%);
             display: flex;
             justify-content: center;
             align-items: center;
-            border-radius: 20px;
-            backdrop-filter: blur(15px);
-            background: transparent;
+            background: rgba(255, 255, 255, 0.2);
+            box-shadow: 0 0 15px rgba(255, 255, 255, 0.6);
+            animation: glow 1.5s infinite alternate;
+        }
+
+        .avatar-border {
+            width: 120px;
+            height: 120px;
+            border-radius: 50%;
+            border: 5px solid rgba(255, 255, 255, 0.6);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .avatar {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            background: url("https://i.pinimg.com/originals/e3/42/aa/e342aa99d92cb8660fa1918986c595d0.gif") no-repeat center;
+            background-size: cover;
+        }
+
+        @keyframes glow {
+            0% {
+                box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+            }
+            100% {
+                box-shadow: 0 0 20px rgba(255, 255, 255, 0.9);
+            }
         }
 
         h2 {
-            font-size: 2em;
+            font-size: 26px;
             color: #fff;
-            text-align: center;
+            margin-top: 60px;
+            margin-bottom: 20px;
         }
 
-        .inputbox {
+        .input-box {
             position: relative;
-            margin: 30px 0;
-            width: 300px;
-            border-bottom: 2px solid #fff;
+            margin: 20px 0;
         }
 
-        .inputbox label {
+        .input-box input {
+            width: 100%;
+            padding: 12px 45px;
+            border: 2px solid rgba(255, 255, 255, 0.6);
+            border-radius: 30px;
+            font-size: 16px;
+            outline: none;
+            background: rgba(255, 255, 255, 0.2);
+            color: #fff;
+            transition: 0.3s;
+        }
+
+        .input-box input::placeholder {
+            color: rgba(255, 255, 255, 0.7);
+        }
+
+        .input-box input:focus {
+            border-color: #fff;
+            background: rgba(255, 255, 255, 0.3);
+        }
+
+        .input-box i {
             position: absolute;
+            left: 15px;
             top: 50%;
-            left: 5px;
             transform: translateY(-50%);
             color: #fff;
-            font-size: 1em;
-            pointer-events: none;
-            transition: 0.5s;
+            font-size: 18px;
         }
 
-        input:focus~label,
-        input:valid~label {
-            top: -5px;
-        }
-
-        .inputbox input {
+        .login-btn {
             width: 100%;
-            height: 50px;
-            background: transparent;
+            padding: 12px;
+            border-radius: 30px;
             border: none;
-            outline: none;
-            font-size: 1em;
-            padding: 0 35px 0 5px;
-            color: #fff;
-        }
-
-        .inputbox ion-icon {
-            position: absolute;
-            right: 8px;
-            color: #fff;
-            font-size: 1.2em;
-            top: 20px;
-        }
-
-        button {
-            width: 100%;
-            height: 40px;
-            border-radius: 40px;
-            border: none;
-            outline: none;
+            background: linear-gradient(45deg, #ff4d88, #ff99c8);
+            color: white;
+            font-size: 18px;
             cursor: pointer;
-            font-size: 1.3em;
-            font-weight: 700;
+            transition: 0.3s ease-in-out;
+            box-shadow: 0 4px 15px rgba(255, 77, 136, 0.5);
+        }
+
+        .login-btn:hover {
+            transform: scale(1.05);
+            background: linear-gradient(45deg, #ff99c8, #ff4d88);
         }
 
         .register {
-            font-size: 0.9em;
+            margin-top: 15px;
+            font-size: 14px;
             color: #fff;
-            text-align: center;
-            margin: 20px 0 15px;
         }
 
-        .register p a {
+        .register a {
+            color: #ffebf0;
+            font-weight: bold;
             text-decoration: none;
-            color: #fff;
-            font-weight: 800;
         }
 
-        .register p a:hover {
+        .register a:hover {
             text-decoration: underline;
         }
 
-        .hidden {
-            display: none;
+        .social-buttons {
+            margin-top: 10px;
+            display: flex;
+            justify-content: center;
+            gap: 15px;
+        }
+
+        .social-buttons a {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            color: white;
+            font-size: 24px;
+            text-decoration: none;
+            transition: 0.3s;
+        }
+
+        .youtube {
+            background: #ff0000;
+            box-shadow: 0 4px 10px rgba(255, 0, 0, 0.5);
+        }
+
+        .youtube:hover {
+            background: #cc0000;
+            transform: scale(1.1);
+        }
+
+        .whatsapp {
+            background: #25D366;
+            box-shadow: 0 4px 10px rgba(37, 211, 102, 0.5);
+        }
+
+        .whatsapp:hover {
+            background: #1ebe5d;
+            transform: scale(1.1);
         }
     </style>
 </head>
 
 <body>
 
-    <div class="button-container" id="button-container">
-        <button id="whatsapp-btn" onclick="openWhatsApp()">
-            <i class="fab fa-whatsapp"></i> WhatsApp
-        </button>
-        <button id="youtube-btn" onclick="openYouTube()">
-            <i class="fab fa-youtube"></i> YouTube
-        </button>
-    </div>
+    <div class="login-container">
+        <div class="avatar-container">
+            <div class="avatar-border">
+                <div class="avatar"></div>
+            </div>
+        </div>
+        <h2>SURYA AI S3 ULTRA</h2>
 
-    <div class="box" id="login-box">
         <form id="login-form">
-            <h2>LOGIN PAGE</h2>
-
-            <div class="inputbox">
-                <ion-icon name="lock-closed-outline"></ion-icon>
-                <input type="text" name="key" id="key" required>
-                <label for="key">ENTER KEY</label>
+            <div class="input-box">
+                <i class="fas fa-key"></i>
+                <input type="text" id="key" placeholder="ENTER YOUR KEY" required>
             </div>
-
-            <button type="submit"> LOGIN</button>
-
-            <div class="register">
-                <p>BUY KEY BY SURYA BCA ? <a href="https://t.me/Suryarunl">BUY KEY</a></p>
-            </div>
+            
+            <button type="submit" class="login-btn">Login</button>
         </form>
+
+        <div class="register">
+            <p>Don't have a key? <a href="https://t.me/Suryarunl">Buy Key</a></p>
+        </div>
+
+        <div class="social-buttons">
+            <a href="https://youtube.com/@namma_village_thiruvila?si=0tVZa77gF7UOVIji" target="_blank" class="youtube">
+                <i class="fab fa-youtube"></i>
+            </a>
+            <a href="https://chat.whatsapp.com/FGYPNIjFtoW2tEarUuLqtY" target="_blank" class="whatsapp">
+                <i class="fab fa-whatsapp"></i>
+            </a>
+        </div>
     </div>
 
     <script>
-    function changeButtonColors() {
-        const colors = ["#ff5733", "#33ff57", "#3357ff", "#f3ff33", "#ff33f6"];
-        let index = 0;
+        document.getElementById("login-form").addEventListener("submit", function(event) {
+            event.preventDefault();
+            let keyInput = document.getElementById("key").value;
 
-        setInterval(() => {
-            document.getElementById("whatsapp-btn").style.backgroundColor = colors[index];
-            document.getElementById("youtube-btn").style.backgroundColor = colors[(index + 2) % colors.length];
+            if (keyInput === "1122") {
+                alert("Login Successful!");
+                window.location.href = "https://arunsurya111.github.io/hackersurya/";
+            } else {
+                alert("Invalid Key! Try again.");
+            }
+        });
+    </script>
 
-            index = (index + 1) % colors.length;
-        }, 1000);
-    }
-
-    function openWhatsApp() {
-        window.open("https://chat.whatsapp.com/CuakMrQkRES9huI7ayhDDm", "_blank");
-    }
-
-    function openYouTube() {
-        window.open("https://youtube.com/@namma_village_thiruvila?si=mWBrJxfzek3lWiah", "_blank");
-    }
-
-    document.getElementById("login-form").addEventListener("submit", function(event) {
-        event.preventDefault();
-        let keyInput = document.getElementById("key").value;
-
-        if (keyInput === "1612") {
-            document.getElementById("login-box").innerHTML = `
-                <h2 style="color: lime; text-align: center;">LOGIN SUCCESS</h2>
-            `;
-            setTimeout(() => {
-                window.location.href = "https://arunsurya111.github.io/hackersurya/"; // Redirect after success message
-            }, 2000);
-        } else {
-            alert("Invalid Key! Try again.");
-        }
-    });
-
-    changeButtonColors();
-</script>
 </body>
 
 </html>
-
