--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 
             if (keyInput === "1122") {
                 alert("Login Successful!");
-                window.location.href = "https://arunsurya111.github.io/hackersurya/";
+                window.location.href = "https://arunsurya111.github.io/hackersuryaa/";
             } else {
                 alert("Invalid Key! Try again.");
             }
