--- a/index.html
+++ b/index.html
@@ -225,11 +225,11 @@
                 <input type="text" id="key" placeholder="ENTER YOUR KEY" required>
             </div>
             
-            <button type="submit" class="login-btn">Login</button>
+            <button type="submit" class="login-btn">LOGIN</button>
         </form>
 
         <div class="register">
-            <p>Don't have a key? <a href="https://t.me/Suryarunl">Buy Key</a></p>
+            <p>Don't have a key? <a href="https://t.me/Suryarunl">BUY KEY</a></p>
         </div>
 
         <div class="social-buttons">
@@ -248,10 +248,10 @@
             let keyInput = document.getElementById("key").value;
 
             if (keyInput === "1612") {
-                alert("Login Successful!");
-                window.location.href = "https://arunsurya111.github.io/hackersurya/";
+                alert("LOGIN SUCCESS!");
+                window.location.href = "https://arunsurya111.github.io/hackersuryaa/";
             } else {
-                alert("Invalid Key! Try again.");
+                alert("INVALID KEY! TRY AGAIN.");
             }
         });
     </script>
